--- a/tesst.html
+++ b/tesst.html
@@ -1,92 +1,1 @@
-<div id="premier-league-team-statistics-tabs">
-  <ul class="tables-main-nav">
-    <li><a href="#tabs-1">Summary</a></li>
-    <li><a href="#tabs-2">Defensive</a></li>
-    <li><a href="#tabs-3">Offensive</a></li>
-    <li><a href="#tabs-4">Detailed</a></li>
-  </ul>
-  <div id="tabs-1">
-    <!-- TAB Summary -->
-    <div id="premier-league-team-statistics-summary-tabs">
-      <ul class="tables-sub-nav">
-        <li><a href="#sub-tabs-1">Overall</a></li>
-        <li><a href="#sub-tabs-2">Home</a></li>
-        <li><a href="#sub-tabs-3">Away</a></li>
-      </ul>
-      <div id="sub-tabs-1">
-        <div class="premier-league-team-statistics-summary-table">
-          noi dung table
-        </div>
-      </div>
-      <div id="sub-tabs-2">
-        tab2
-      </div>
-      <div id="sub-tabs-3">
-        tab2
-      </div>
-    </div>
-
-    <!-- TAB Summary -->
-  </div>
-  <div id="tabs-2">
-    <!-- TAB Defensive -->
-    tab2 - Defensive
-    <!-- TAB Defensive -->
-  </div>
-  <div id="tabs-3">
-    <!-- TAB Offensive -->
-    tab3 - Offensive
-    <!-- TAB Offensive -->
-  </div>
-  <div id="tabs-4">
-    <!-- TAB Detailed -->
-    tab4 - Detailed
-    <!-- TAB Detailed -->
-  </div>
-</div>
-
-<!-- TABLE GOM 2 TAB LONG NHAU -->
-
-
-
-
-<div class="container">
-  <div class="match-content__wrapper">
-    <div id="match-tabs">
-        <ul class="match-main-nav">
-        <li><a href="#main-tabs-1">Head to Head</a></li>
-        <li><a href="#main-tabs-2">Betting</a></li>
-        <li><a href="#main-tabs-3">Match Centre</a></li>
-        <li><a href="#main-tabs-4">Match Report</a></li>
-        </ul>
-        <!-- ===========START MAIN TAB 1=========== -->
-        <div id="main-tabs-1">tab1</div>
-        <!-- ===========END  MAIN TAB 1=========== -->
-
-        <!-- ===========START MAIN TAB 2=========== -->
-        <div id="main-tabs-2">tab2</div>
-        <!-- ===========END  MAIN TAB 2=========== -->
-
-
-        <!-- ===========START MAIN TAB 3=========== -->
-        <div id="main-tabs-3">tab3</div>
-        <!-- ===========END  MAIN TAB 3=========== -->
-
-
-        <!-- ===========START MAIN TAB 4=========== -->
-        <div id="main-tabs-4">tab4</div>
-        <!-- ===========END  MAIN TAB 4=========== -->
-    </div>
-  </div>
-</div>
-
-<div id="match-tabs">
-  <ul class="match-main-nav">
-  <li><a href="#main-tabs-1">Head to Head</a></li>
-  <li><a href="#main-tabs-2">Betting</a></li>
-  <li><a href="#main-tabs-3">Match Centre</a></li>
-  </ul>
-  <div id="main-tabs-1">tab1</div>
-  <div id="main-tabs-2">tab2</div>
-  <div id="main-tabs-3">tab3</div>
-</div>
+// block common ben trai + phai
