--- a/price.html
+++ b/price.html
@@ -24,6 +24,7 @@
 		<link rel="stylesheet" type="text/css" href="css/account.css">
 		<link rel="stylesheet" type="text/css" href="css/price.css">
 		<link rel="stylesheet" type="text/css" href="css/thankiu.css">
+		<link rel="stylesheet" type="text/css" href="css/authen.css">
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries-->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file://-->
@@ -388,7 +389,7 @@
               <span class="step-detail">Select a payment method</span>
             </div>
 
-            <div class="select-plan-content-wrapper create-account-content-wrapper">
+            <div class="select-plan-content-wrapper create-account-content-wrapper select-payment">
               <div class="select-plan-header">
                 <span class="title">Select a payment method</span>
               </div>
