create league page

--- a/tesst.html
+++ b/tesst.html
@@ -39,3 +39,97 @@
 
   </span>
 </div>
+
+
+<!--  ==========block bottom right sidebar -->
+
+<div class="right-common-content right-sidebar-league-info-block">
+  <h4 class="block-right-title">League Info</h4>
+  <h5 class="block-right-sub-title">Titles</h5>
+  <div class="list-club">
+    <div class="club-item">
+      <img src="./images/club-1.png" alt="" class="club-image">
+      <span class="club-name">Man City</span>
+      <span class="label">Title holder (8)</span>
+    </div>
+    <div class="club-item">
+      <img src="./images/club-2.png" alt="" class="club-image">
+      <span class="club-name">Man United</span>
+      <span class="label">Most titles (20)</span>
+    </div>
+  </div>
+
+  <div class="block-league-item-wrapper">
+    <h5 class="block-right-sub-title">Lower division</h5>
+    <div class="list-league">
+      <div class="league-item">
+        <img src="./images/league-1.png" alt="" class="league-image">
+        <span class="league-name">Championship</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="block-league-item-wrapper">
+    <h5 class="block-right-sub-title">Newcomers from lower division</h5>
+    <div class="list-league">
+      <div class="league-item">
+        <img src="./images/league-2.png" alt="" class="league-image">
+        <span class="league-name">Nottingham Forest</span>
+      </div>
+      <div class="league-item">
+        <img src="./images/league-1.png" alt="" class="league-image">
+        <span class="league-name">Nottingham Forest </span>
+      </div>
+      <div class="league-item">
+        <img src="./images/league-4.png" alt="" class="league-image">
+        <span class="league-name">Nottingham Forest ottingham Forest </span>
+      </div>
+    </div>
+  </div>
+
+  <div class="facts-league-wrapper">
+    <h5 class="block-right-sub-title">Facts</h5>
+    <div class="facts-league-table">
+      <div class="table-row">
+        <span class="label">Goals</span>
+        <span class="value">419</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Average goals</span>
+        <span class="value">2.87</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Home team wins</span>
+        <span class="value">49%</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Away team wins</span>
+        <span class="value">27%</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Draws</span>
+        <span class="value">23%</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Yellow cards</span>
+        <span class="value">3.2</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Red cards</span>
+        <span class="value">17</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Number of rounds</span>
+        <span class="value">36</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Number of competitors</span>
+        <span class="value">3</span>
+      </div>
+      <div class="table-row">
+        <span class="label">Division level</span>
+        <span class="value">1</span>
+      </div>
+    </div>
+  </div>
+</div>
